--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
+    "joi": "^17.4.1",
     "joi-browser": "^13.4.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
